# picoray

./: CMakeLists.txt  LICENSE  README.md
include/: Camera.h  Hitable.h  HitableList.h  Material.h  Random.h  Ray.h  Sphere.h  Vector3.h
source/: main.cpp
src/: main.cpp
